--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicn.png" />
+    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>金股雷达</title>
+    <title>Chaoding</title>
   </head>
   <body>
     <div id="app"></div>
